# hamster-lite

./: .flake8  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  NEWS.rst  README.md  README.rst  wscript
data/: edit_activity.ui  hamster-lite.desktop.in.in  hamster-lite.metainfo.xml  preferences.ui  report_template.html  stats.ui  wscript_build
doc/: backup.md  index.md  input.md  keys.md  merge.md
docs/: index.md  reports.md  statistics.md  tracking.md
help/: Makefile.am
help/it/: it.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  wscript
src/: hamster-cli  hamster-lite  hamster-lite.bash  hamsterlite.bash
src/hamster/: about.py  edit_activity.py  overview.py  preferences.py  reports.py  storage.py
src/hamster/lib/: __init__.py  configuration.py  runtime.py
src/hamster/storage/: db.py  storage.py
src/hamster/widgets/: activityentry.py  dates.py  dayline.py  facttree.py  tags.py
src/hamster_lite/: __init__.py  about.py  edit_activity.py  external.py  fact_editor.py  main.py  overview.py  preferences.py  reports.py  storage.py
src/hamster_lite/lib/: __init__.py  charting.py  configuration.py  desktop.py  graphics.py  i18n.py  layout.py  runtime.py  stuff.py
src/hamster_lite/widgets/: __init__.py  activityentry.py  dates.py  dayline.py  facttree.py  reportchooserdialog.py  tags.py  timeinput.py
tests/: stuff_test.py
waflib/: Context.py  Scripting.py
waflib/Tools/: qt5.py
