include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = hamster-lite
DOC_INCLUDES = legal.xml
DOC_LINGUAS = it

DOC_PAGES = \
        backup.page \
        index.page \
        input.page \
        keys.page \
        merge.page \
        reports.page \
        statistics.page \
        tracking.page
